changed the name of the bin file so it corresponds to the plan

--- a/installer/usr/share/applications/TTCalc.desktop
+++ b/installer/usr/share/applications/TTCalc.desktop
@@ -3,7 +3,7 @@ Encoding=UTF-8
 Version=0.1.0
 Type=Application
 Terminal=false
-Exec='/usr/bin/ttcalc'
+Exec='/usr/bin/topteam-calc'
 Name=TT Calc
 Icon=/usr/share/topteam-calculator/ttc_logo.png
 Comment=A simple calculator app.
